# MNN_lite

./: CMakeLists.txt  README.md
include/MNN/: Interpreter.hpp
source/core/: Backend.hpp  Command.hpp  Pipeline.cpp  Pipeline.hpp  Schedule.hpp  TensorUtils.cpp  TensorUtils.hpp
